src/main/java/com/example/citronix/web/errors/MaximumArbreForFermeException.java
package com.example.citronix.web.errors;

public class MaximumArbreForFermeException extends RuntimeException {
    public MaximumArbreForFermeException(String message) {
        super(message);
    }
}
